Switch to OpenAI Responses API and add supabase and MCP docker bridge

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 FREESTYLE_API_KEY=...
-ANTHROPIC_API_KEY=...
+OPENAI_API_KEY=...
+SUPABASE_ACCESS_TOKEN=...
+MCP_DOCKER_PORT=8811
+MCP_DOCKER_IMAGE=alpine/socat
 DATABASE_URL=postgres://...
 
 NEXT_PUBLIC_STACK_PROJECT_ID=<your-project-id>
