--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/react": "^1.2.8",
     "@ai-sdk/ui-utils": "^1.2.8",
-    "@anthropic-ai/sdk": "^0.40.1",
     "@hookform/resolvers": "^5.0.1",
     "@isomorphic-git/lightning-fs": "^4.6.0",
     "@mastra/core": "^0.10.0",
@@ -28,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@stackframe/stack": "^2.8.11",
+    "@supabase/mcp-server-supabase": "^0.4.3",
     "@tanstack/react-query": "^5.74.11",
     "ai": "^4.3.4",
     "class-variance-authority": "^0.7.1",
@@ -42,6 +42,7 @@
     "motion": "^12.7.4",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
+    "openai": "^5.5.0",
     "pg": "8.14.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
@@ -73,5 +74,6 @@
     "tailwindcss": "^4.1.3",
     "tsx": "^4.19.3",
     "typescript": "^5"
-  }
+  },
+  "type": "binary"
 }
